# translatools

./: PUBLISH.bat  README.md  pyproject.toml
src/translatools/: __init__.py  __main__.py  config.py  ftbquests.py  handler.py  paratranz.py  translatools.py
