[project]
name = "translatools"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taskeren", email = "r0yalist@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cursefetch>=0.2.2",
    "dacite>=1.9.2",
    "ftb-snbt-lib>=0.4.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
translatools = "translatools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
